[package]
name = "nucc-message-info"
version = "0.1.0"
authors = ["Kojo Bailey"]
description = "Abstracted interface for the MessageInfo data structure used across CyberConnect2 NUCC games."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
version = { workspace = true }
